# PictureConvertToBlack

./: CMakeLists.txt  LICENSE  PictureConvert.qmlproject  PictureConvert.qmlproject.qtds  README.md  qds.cmake
App/: CMakeLists.txt  main.cpp
App/autogen/: environment.h
App/inc/: AppContext.h  PathReceiver.h  PictureConvert.h  TextAreaLog.h
App/src/: AppContext.cpp  PathReceiver.cpp  PictureConvert.cpp  TextAreaLog.cpp
PictureConvert/: CMakeLists.txt  Constants.qml  qmldir
PictureConvert/designer/: plugin.metainfo
PictureConvertContent/: App.qml  CMakeLists.txt
